2012-11-17 v.1.3
+ Changed affix merging algorithm
+ Support for affix aliases
+ Added open output folder option

2012-11-17 v.1.2
- Fixed loading affixes

2012-11-17 v.1.1
+ Improved dictionary merging
+ Decreased memory usage
+ Added work log panel