@@ -1,3 +1,7 @@
+2012-12-09 v.1.4
++ Added: Words count in dictionaries table
+- Fixed: Reading self created dictionaries
+
 2012-11-17 v.1.3
 + Changed affix merging algorithm
 + Support for affix aliases
